feat(usertask): harden interaction capsule